# blured

./: .env.example  .gitignore  .gitmodules  CLAUDE.local.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  blured-models.json  blured.json  build_godot.bat  build_makabaka.bat  check_providers.ps1  opencode.json  package-lock.json  provider_tmp.json  start_makabaka.bat
.claude/: settings.local.json
.claude/plans/: Makabaka_Engine.md  ai-based-asset.md
.claude/skills/build-blured/: SKILL.md
.claude/skills/build-makabaka/: SKILL.md
.claude/skills/git-dev-feature/: SKILL.md
.claude/skills/git-dev-merge/: SKILL.md
.claude/skills/git-pushing/: SKILL.md
.claude/skills/package-blured/: SKILL.md
.claude/skills/start-blured/: SKILL.md
.claude/skills/start-makabaka/: SKILL.md
.claude/skills/tech-debt/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: ai-programming-style-guide.md  context-optimization-guide.md  game-development-rule.md
docs/contributing/: modules.md  templates.md
launcher/: Cargo.toml  build.rs
launcher/src/: main.rs  updater.rs
modules/: module_registry.json
modules/core/game_manager/: game_manager.gd  interface.json
modules/core/input_handler/: input_handler.gd  interface.json
modules/player/player_movement/: interface.json  player_movement.gd
prompts/: game-development-rule.md  godot-editor-tools-guide.md
prompts/skills/add-level/: SKILL.md
prompts/skills/analyze-screenshot/: SKILL.md
templates/: template_registry.json
templates/platformer_2d/: template.json
templates/topdown_shooter/: template.json
(+14 files in other folders)
