[package]
name = "blured-launcher"
version = "0.1.0"
edition = "2021"
description = "Blured Engine launcher with auto-update"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
semver = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
